fix: dark mode theme being overwritten

--- a/src/style/src.css
+++ b/src/style/src.css
@@ -127,8 +127,8 @@ select {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
+    /*@apply bg-background text-foreground;*/
+    /*font-feature-settings: "rlig" 1, "calt" 1;*/
   }
 }
 
